Bug 295965 - Wacom zoom wheel weird behaviour in full size mode (SHIFT) and with the horizontal mirror activated.
Summary: Wacom zoom wheel weird behaviour in full size mode (SHIFT) and with the horiz...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Usability (other bugs)
Version First Reported In: unspecified
Platform: unspecified Other
: NOR normal
Target Milestone: ---
Assignee: Dmitry Kazakov
URL: https://bugs.kde.org/show_bug.cgi?id=...
Keywords:
Depends on:
Blocks:
 
Reported: 2012-03-13 22:53 UTC by erik90mx
Modified: 2012-10-02 16:36 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description erik90mx 2012-03-13 22:53:36 UTC
User-Agent:       Mozilla/5.0 (X11; Ubuntu; Linux x86_64; rv:10.0.2) Gecko/20100101 Firefox/10.0.2
Build Identifier: 

Well I just will copy and paste my original message to this bug report:
https://bugs.kde.org/show_bug.cgi?id=295812

Now I'm using the Beta version of Kirta, now I have some issues with the zoom wheel of my Wacom and the full size canvas (pressing SHIFT), when I try to zoom in in certain area of my paint Krita it just throw me alone in some other part of the total canvas (I don't know if this worth but I have the horizontal mirror activated) 

I don't know what version of Krita I'm using right now, but I just compile it yesterday (11/03/2012)


Greetings

PD: The wheel zoom of my WAcom just work fine without the full screen mode (pressing SHIFT)

My Wacom is a old Bamboo Fun , Model: CTE-450

Reproducible: Always

Steps to Reproduce:
1.Choose the horizontal mirror
2.Use the full screen of Krita (pressing SHIFT)
3.Use the Wacom zoom wheel to do zoom in a certain part of the canvas (this will cause the weird behavior)
Actual Results:  
It throws me to another part of the canvas

Expected Results:  
I just want to do a proper zoom in a certain part of the canvas (to work) with my wacom zoom wheel (in full size mode of course)
Comment 1 Halla Rempt 2012-03-14 07:48:01 UTC
Thanks! I can indeed confirm. Dmitry, could you put this on your todo list?
Comment 2 Dmitry Kazakov 2012-03-17 12:37:44 UTC
Thanks for the report!
Comment 3 Dmitry Kazakov 2012-03-17 12:40:33 UTC
Thanks for the report!
It looks like the offset of the image is dealt wrong when the image is fullscreen.
It can be reproduced in the following ways:
1) Switch to the Fullscreen Mode, zoom in.
2) While in fullscreen mode, first pan, then zoom in.

Simple zooming in and zooming out doesn't show the bug.
Comment 4 Dmitry Kazakov 2012-04-07 14:21:15 UTC
Git commit 135d45d9067afbbe839c076be90e9188ba087669 by Dmitry Kazakov.
Committed on 07/04/2012 at 16:20.
Pushed by dkazakov into branch 'zoom-pan-testing-kazakov'.

Do not return bogus preferred center values when the scroll bars are hidden

This change doesn't affect any other applications, because when the bars
are hidden automatically by QAbstractScrollArea the value of the preferred
center is irrelevant, because the range of scroll bars is set to (0,0).

M  +65   -34   krita/ui/tests/kis_zoom_and_pan_test.cpp
M  +10   -1    krita/ui/tests/kis_zoom_and_pan_test.h
M  +15   -37   libs/flake/KoCanvasControllerWidget.cpp

http://commits.kde.org/calligra/135d45d9067afbbe839c076be90e9188ba087669
Comment 5 Dmitry Kazakov 2012-10-02 16:36:25 UTC
Git commit 99d50c46af35f8f38ea6b3372890a7362d37c621 by Dmitry Kazakov.
Committed on 07/04/2012 at 16:20.
Pushed by dkazakov into branch 'calligra/2.5'.

Do not return bogus preferred center values when the scroll bars are hidden

This change doesn't affect any other applications, because when the bars
are hidden automatically by QAbstractScrollArea the value of the preferred
center is irrelevant, because the range of scroll bars is set to (0,0).

M  +65   -34   krita/ui/tests/kis_zoom_and_pan_test.cpp
M  +10   -1    krita/ui/tests/kis_zoom_and_pan_test.h
M  +15   -37   libs/flake/KoCanvasControllerWidget.cpp

http://commits.kde.org/calligra/99d50c46af35f8f38ea6b3372890a7362d37c621