Do not return bogus preferred center values when the scroll bars are hidden

This change doesn't affect any other applications, because when the bars
are hidden automatically by QAbstractScrollArea the value of the preferred
center is irrelevant, because the range of scroll bars is set to (0,0).

BUG:295965